# cappyfoodies

./: README.md  app.py  business_cleaned_v2.csv  clean.py  pyproject.toml  yelp_business_simulation  yelp_review_simulation
cappyfoodies/: app.py
cappyfoodies/clean_func/: category_dict.py  clean.py  gen_data.py  restaurants_cleanup.py  reviews_cleanup.py
cappyfoodies/cleaned_data/: business_cleaned_v3.csv  demo_data.csv  pantry_data.csv  res_label.csv  risk_cleaned.csv
cappyfoodies/dashboard/: Completed Main Dash_v1 (4).py  dashboard.py  main_dash.py  main_dash_after_style.py
cappyfoodies/data/: education.csv  label.csv  population.csv  scraping_data
cappyfoodies/scraping_data/: pantry_scaper.py  pantry_scraper.py  yelp_api.py  yelp_business_simulation  yelp_review_simulation  yelp_simulation.py
clean_func/: clean.py  gen_data.py
dashboard/: Completed Main Dash_v1 (4).py
data/: .scraping_data  category_dict.py  clean.py  demo_data.csv  final_set.csv  food stamp.csv  gen_data.py  income.csv  pantry_scraper  res_label.csv  top_race.csv  yelp_api.py
scraping_data/: pantry_scaper.py  yelp_api.py  yelp_simulation
