[tool.poetry]
name = "30122-project-cappyfoodies"
version = "0.1.0"
description = "This is cappyfoodies project"
authors = ["yueyue-w <yueyue@uchicago.edu>"]
readme = "README.md"
packages = [{include = "30122_project_cappyfoodies"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "^1.5.3"
geojson = "^3.0.1"
folium = "^0.14.0"
plotly = "^5.13.1"
dash = "^2.8.1"
numpy = "^1.24.2"
wordcloud = "^1.8.2.2"
image = "^1.5.33"
requests = "^2.28.2"
pillow = "^9.4.0"
nltk = "^3.8.1"
lxml = "^4.9.2"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
